# eora_assistant

./: .gitignore  Makefile  README.md  bot.py  config.py  exceptions.py  handlers.py  pyproject.toml  requirements.txt  services.py  system_prompt.md
